--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Navigator {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.Navigator-Item {
+  display: flex;
+  align-items: center;
+  margin: 0 10px;
+  padding: 5px 10px;
+  cursor: pointer;
+  opacity: 0.4;
+}
+
+.Navigator-Item.Active {
+  opacity: 0.7;
+  font-weight: bold;
+  border-bottom: solid 1px black;
+}
+
+.Navigator-Item:hover {
+  opacity: 1.0;
+}
+
+.Navigator-Item-Title {
+  margin-left: 5px;
+  font-size: 1.2em;
+}
+
+@media screen and (max-width: 600px) {
+  .Navigator-Item-Title {
+    display: none;
   }
 }
