--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
 }
 
 .Navigator {
   display: flex;
+  height: 50px;
+  position: fixed;
+  z-index: 5; 
+  background-color: white;
 }
 
 .Navigator-Item {
@@ -23,13 +28,20 @@
   border-bottom: solid 1px black;
 }
 
-.Navigator-Item:hover {
+.Navigator-Item:hover, .Navigator-Item:active {
   opacity: 1.0;
 }
 
 .Navigator-Item-Title {
   margin-left: 5px;
   font-size: 1.2em;
+}
+
+.Page {
+  height: calc(100% - 100px);
+  margin-top: 50px;
+  padding: 30px 0;
+  width: 95%;
 }
 
 @media screen and (max-width: 600px) {
